--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "14799d02",
+   "id": "a35632ae",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "04802674",
+   "id": "ea7881a7",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "cf92048e",
+   "id": "98920769",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "7c628133",
+   "id": "a452df0c",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "06f82414",
+   "id": "7b6f7160",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "bed8f28a",
+   "id": "3ad3e1d2",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "407295f2",
+   "id": "d45f1ca8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d55f3f73",
+   "id": "e0e42efc",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8d3cbd6d",
+   "id": "450cf1ca",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "35c9500e",
+   "id": "6e2ce252",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "533eeef2",
+   "id": "1626a192",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b1249eab",
+   "id": "ec3994d7",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "db0126cd",
+   "id": "900f2187",
    "metadata": {},
    "outputs": [
     {
@@ -433,8 +433,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "f23a29c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'11/09/22'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ae75d074",
+   "id": "9a1bbd40",
    "metadata": {},
    "outputs": [],
    "source": []
