--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -307,7 +307,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd95c8c696224626bc784f9e1456271f",
+       "model_id": "1897b089f6894ce3ab042aa59578ab92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -365,11 +365,11 @@
    "outputs": [],
    "source": [
     "# Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = vacation_start[\"Lat\"].to_numpy()[0], vacation_start[\"Lng\"].to_numpy()[0]\n",
-    "end = vacation_end[\"Lat\"].to_numpy()[0], vacation_start[\"Lng\"].to_numpy()[0]\n",
-    "stop1 = vacation_stop1[\"Lat\"].to_numpy()[0], vacation_stop1[\"Lng\"].to_numpy()[0]\n",
-    "stop2 = vacation_stop2[\"Lat\"].to_numpy()[0], vacation_stop2[\"Lng\"].to_numpy()[0]\n",
-    "stop3 = vacation_stop3[\"Lat\"].to_numpy()[0], vacation_stop3[\"Lng\"].to_numpy()[0]"
+    "start = vacation_start.iloc[0,5:7].to_numpy()\n",
+    "end = vacation_end.iloc[0,5:7].to_numpy()\n",
+    "stop1 = vacation_stop1.iloc[0,5:7].to_numpy()\n",
+    "stop2 = vacation_stop2.iloc[0,5:7].to_numpy()\n",
+    "stop3 = vacation_stop3.iloc[0,5:7].to_numpy()"
    ]
   },
   {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -389,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbc3ffe49ab548d587b1bfb35625e097",
+       "model_id": "01b278d95f2149a683c4c28f6620e973",
        "version_major": 2,
        "version_minor": 0
       },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "3 -63.0208                     Corrêa Hotel  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,13 +575,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ec3ad660571440b9d3fd76211efbc2a",
+       "model_id": "2ad168d9f7ff46419aadfd96d8a39c01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -606,6 +606,20 @@
     "# Display the map\n",
     "fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
